# ROS_pick_place

./: README.md  problems encountered.txt
install/: local_setup.sh  setup.sh
install/pick_and_place/lib/pick_and_place/: pick_and_place_node
install/pick_and_place/share/ament_index/resource_index/parent_prefix_path/: pick_and_place
install/pick_and_place/share/pick_and_place/: local_setup.sh  package.sh
src/: README.md
src/pick_and_place/: CMakeLists.txt
src/pick_and_place/launch/: pick_and_place.launch.py
src/pick_and_place/src/: pick_and_place.cpp  pick_and_place.py
